--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <!-- The CSS and JS file must be declared after the things above-->
     <link rel="stylesheet" href="index.css"/>
     <script type="text/javascript" src="index.js"></script>
+    <script type="text/javascript" src="submit.js"></script>
 
   </head>
   <body>
